<resources>
    <string name="app_name">InventoryApp3</string>

    <!-- Label for overflow menu option that inserts fake Item data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all Item data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Items</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a Item [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a Item</string>

    <!-- Title for the activity to add a new Item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_Item">Add a Item</string>

    <!-- Title for the activity to edit an existing Item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_Item">Edit Item</string>

    <!-- Label for editor menu option to save Item and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current Item [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new Item has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_Item_successful">Item saved</string>

    <!-- Toast message in editor when new Item has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_Item_failed">Error with saving Item</string>

    <!-- Toast message in editor when current Item was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_Item_successful">Item updated</string>

    <!-- Toast message in editor when current Item has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_Item_failed">Error with updating Item</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current Item [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current Item was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_Item_successful">Item deleted</string>

    <!-- Toast message in editor when current Item has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_Item_failed">Error with deleting Item</string>

    <!-- Dialog message to ask the user to confirm deleting the current Item [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this Item?</string>

    <!-- Dialog button text for the option to confirm deleting the current Item [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current Item [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for gender information in the editor [CHAR LIMIT=30] -->
    <string name="category_gender">Gender</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_price">Price</string>

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_Item_name">Name</string>

    <!-- Text hint for Price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_Item_brand">Brand</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_Item_price">Price</string>

    <!-- Units for weight of the Item (kilograms) [CHAR LIMIT=5] -->
    <string name="unit_Item_price">EUR</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_Item_quantity">Quantity</string>

    <!-- Units for weight of the Item (kilograms) [CHAR LIMIT=5] -->
    <string name="unit_Item_quantity">EUR</string>


    <!-- Label for dropdown menu option if the Item's gender is unknown [CHAR LIMIT=20] -->
    <string name="gender_unknown">Unknown</string>

    <!-- Label for dropdown menu option if the Item is male [CHAR LIMIT=20] -->
    <string name="gender_male">Male</string>

    <!-- Label for dropdown menu option if the Item is female [CHAR LIMIT=20] -->
    <string name="gender_female">Female</string>

    <!-- Toast message in detail when quantity tries to go below zero -->
    <string name="detail_quantity_negative">Quantity cannot go below zero</string>






</resources>
